# meta

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.rst  REUSE.toml  SECURITY.md  generate-dependabot  pyproject.toml  renovate.json  repo-fixups  requirements.txt  sync.sh  update-issue-config  update-issue-templates  update-pre-commit  update-workflow
.github/: .kodiak.toml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.md.weblate  bug_report.weblate.yml  bug_report.yml  bug_report.yml.weblate  config.yml  feature_request.md  feature_request.yml  support_question.md  support_question.md.weblate  support_question.weblate.yml  support_question.yml  support_question.yml.weblate
.github/ISSUE_TEMPLATE/snippets/: additional.md  additional.yml  bug_report.yml  commercial.md  commercial.yml  describe-issue.md  describe-issue.yml  exception.md  exception.yml  expected.md  expected.yml  feature-alternatives.md  feature-alternatives.yml  feature-describe.md  feature-describe.yml  feature-solution.md  feature-solution.yml  feature_request.yml  head.yml  intro.md  intro.yml  reproduce.md  reproduce.yml  screenshots.md  screenshots.yml  support_question.yml  tried.md  tried.yml  weblate-checks.md  weblate-checks.yml  weblate-versions.md  weblate-versions.yml
.github/actions/pre-commit-setup/: action.yml
.github/comments/: issue-newbie.md
.github/workflows/: closing.yml  eslint.yml  flake8.yml  label-sync.yml  labels.yml  pre-commit.yml  stale.yml  stylelint.yml  super-linter.yml  uv-upgrade.yml  yarn-update.yml
.reuse/: dep5
dummy/: dummy.css
scripts/: yarn-update
