[dependency-groups]
dev = [
  "ruamel.yaml==0.19.1",
  {include-group = "pre-commit"}
]
pre-commit = [
  "prek==0.3.3"
]

[project]
authors = [
  {name = "Michal Čihař", email = "michal@weblate.org"}
]
name = "weblate-meta"
requires-python = ">=3.11"
version = "2024.11"

[tool.isort]
profile = "black"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "E",
  "F",
  "B",
  "T10",
  "A",
  "C4",
  "C90",
  "YTT",
  "DJ",
  "UP",
  "D",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "RUF",
  "ERA",
  "ICN",
  "ISC",
  "EXE",
  "INP",
  "PIE",
  "G",
  "PYI",
  "Q",
  "SIM",
  "TID",
  "RSE",
  "T20",
  "RET",
  "SLF",
  "N"
]

[tool.ruff.lint.mccabe]
max-complexity = 16
