[dependency-groups]
dev = [
  "ruamel.yaml==0.19.1",
  {include-group = "pre-commit"}
]
pre-commit = [
  "prek==0.3.9"
]

[project]
authors = [
  {email = "michal@weblate.org", name = "Michal Čihař"}
]
name = "weblate-meta"
requires-python = ">=3.11"
version = "2024.11"

[tool.isort]
profile = "black"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "D",
  "DJ",
  "E",
  "ERA",
  "EXE",
  "F",
  "G",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TID",
  "TRY",
  "UP",
  "YTT"
]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
